--- a/temples.html
+++ b/temples.html
@@ -17,7 +17,7 @@
     <header>
         <section class="flexxy">
             <h1>Temple Album</h1>
-            
+
             <a id="menu" href="#"></a>
             <nav>
                 <ul class="navigation">
@@ -86,7 +86,7 @@
 
     </main>
     <footer>
-        <p><span id="currentyear"></span> ©️2025, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
+        <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
         <p id="last_modified">"Last modification"</p>
 
     </footer>
