--- a/temples.html
+++ b/temples.html
@@ -47,37 +47,37 @@
 
                 </figure>
                 <figure>
-                    <img src="images/salt_lake_temple_lds (1).webp" alt="Slc" style="width: 250" height="167">
+                    <img src="images/salt_lake_temple_lds.webp" alt="Slc">
                     <figcaption>Temple 3: SLC, UT</figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/mesa_temple.webp" alt="Mesa" style="width: 250" height="167">
+                    <img src="images/mesa_temple.webp" alt="Mesa">
                     <figcaption> Temple 4: Mesa, AZ </figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/oakland-temple.webp" alt="Oaktown" style="width: 250" height="167">
+                    <img src="images/oakland_temple.webp" alt="Oaktown">
                     <figcaption>Temple 5: Oakland, CA</figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/washington_dc.webp" alt="Washington" style="width: 250" height="167">
+                    <img src="images/washington_dc.webp" alt="Washington">
                     <figcaption>Temple 6: Washington D.C</figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/laie_hawaii.webp" alt="Laie" style="width: 250" height="167">
+                    <img src="images/laie_hawaii.webp" alt="Laie">
                     <figcaption>Temple 7: Laie, HW</figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/mexico_city.webp" alt="Mexico" style="width: 250" height="167">
+                    <img src="images/mexico_city.webp" alt="Mexico">
                     <figcaption>Temple 8: Mexico city, MX</figcaption>
 
                 </figure>
                 <figure>
-                    <img src="images/perth_temple.webp" alt="Perth" style="width: 250" height="167">
+                    <img src="images/perth_temple.webp" alt="Perth">
                     <figcaption>Temple 9: Perth, AU</figcaption>
 
                 </figure>
