--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     </main>
     <footer>
-        <p><span id="currentyear"></span> ©️2025, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
+        <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
         <p id="last_modified">"Last modification"</p>
 
     </footer>
