--- a/temples.html
+++ b/temples.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Giovanni Rubio">
-    <meta name="description" content="This is an album of temple photos">
+    <meta name="description" content="This is an album of temple photos of various temples that I have either visited or want to go to someday in the near future. I was sealed in one of those temples">
     <title>Temple album</title>
     <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="stylesheet" href="styles/temples.css">
@@ -40,14 +40,12 @@
             <h2>Home</h2>
             <div class="flex_time">
                 <figure>
-                    <img src="images/las_vegas.webp" alt="Vegas" style="width: 250" height="167">
+                    <img src="images/las_vegas.webp" alt="Vegas">
                     <figcaption>Temple 1: Las Vegas, NV</figcaption>
-
-
                 </figure>
                 <figure>
-                    <img src="images/recife_temple.webp" alt="Recife" style="width: 250" height="167">
-                    <figcaption>Temple 2: Recife, BR <figcaption>
+                    <img src="images/recife_temple.webp" alt="Recife">
+                    <figcaption>Temple 2: Recife, BR<figcaption>
 
                 </figure>
                 <figure>
@@ -73,7 +71,6 @@
                 <figure>
                     <img src="images/laie_hawaii.webp" alt="Laie">
                     <figcaption>Temple 7: Laie, HW</figcaption>
-
                 </figure>
                 <figure>
                     <img src="images/mexico_city.webp" alt="Mexico">
@@ -83,7 +80,6 @@
                 <figure>
                     <img src="images/perth_temple.webp" alt="Perth">
                     <figcaption>Temple 9: Perth, AU</figcaption>
-
                 </figure>
             </div>
         </section>
