--- a/temples.html
+++ b/temples.html
@@ -45,7 +45,7 @@
                     
                 </figure>
                 <figure>
-                    <figcaption><p>Temple 2: Recife, BR</p><figcaption>
+                    <figcaption><p>Temple 2: Recife, BR</p></figcaption>
                     <img src="images/recife_temple.webp" alt="Recife">
                 </figure>
                 <figure>
