--- a/week03/place.html
+++ b/week03/place.html
@@ -13,55 +13,57 @@
 </head>
 
 <body>
-    <header class="flexman">
-        <section class="straight">
+    <div class="holy_grail">
+        <header class="flexman">
+            <section class="straight">
+                <article>
+                    <h2>Brazil</h2>
+                    <picture class="hero">
+                        <source src="welcome_to_brazil_large.wepb" media="(min_width: 500)">
+                        <img src="countryimages/welcome_to_brazil_small.webp" alt="Brazil" width="400">
+                    </picture>
+                </article>
+
+            </section>
+
+        </header>
+        <main class="flexman">
+
+            <section class="straight data">
+                <h3>Data</h3>
+                <ul>
+                    <li><span id="boldy">Area</span>: 8,515,767 km</li>
+                    <li><span id="boldy">Population</span>: 203 million</li>
+                    <li><span id="boldy">Capital</span>: Brasilia</li>
+                    <li><span id="boldy">Languages</span>: Portuguese</li>
+                    <li><span id="boldy">Currency</span>: Real</li>
+                    <li><span id="boldy">Time Zone</span>: UTC-2</li>
+
+                </ul>
+
+            </section>
+            <section class="straight edge">
+                <h4>Weather</h4>
+                <img src="countryimages/weather.svg" alt="Weather" width="80" height="167">
+                <ul>
+                    <li><span id="boldy">Temperature</span>: 47° F</li>
+                    <li><span id="boldy">Conditions</span>: Cloudy</li>
+                    <li><span id="boldy">Wind</span>: 5km /h</li>
+                    <li><span id="boldy">Wind chill</span>: 43° C </li>
+
+                </ul>
+            </section>
+
+        </main>
+        <footer class="straight squish">
             <article>
-                <h2>Brazil</h2>
-                <picture class="hero">
-                    <source src="welcome_to_brazil_large.wepb" media="(min_width: 500)">
-                    <img src="countryimages/welcome_to_brazil_small.webp" alt="Brazil" width="400">
-                </picture>
+                <p>©️<span id="currentyear"></span> 🥷🏼 Giovanni Rubio 🥷🏼 </p>
+                <p>Brazil</p>
+                <p id="last_modified">Last modification</p>
             </article>
 
-        </section>
-
-    </header>
-    <main class="flexman">
-
-        <section class="straight data">
-            <h3>Data</h3>
-            <ul>
-                <li><span id="boldy">Area</span>: 8,515,767 km</li>
-                <li><span id="boldy">Population</span>: 203 million</li>
-                <li><span id="boldy">Capital</span>: Brasilia</li>
-                <li><span id="boldy">Languages</span>: Portuguese</li>
-                <li><span id="boldy">Currency</span>: Real</li>
-                <li><span id="boldy">Time Zone</span>: UTC-2</li>
-
-            </ul>
-
-        </section>
-        <section class="straight edge">
-            <h4>Weather</h4>
-            <img src="countryimages/weather.svg" alt="Weather" width="80" height="167">
-            <ul>
-                <li><span id="boldy">Temperature</span>: 47° F</li>
-                <li><span id="boldy">Conditions</span>: Cloudy</li>
-                <li><span id="boldy">Wind</span>: 5km /h</li>
-                <li><span id="boldy">Wind chill</span>: 43° C </li>
-
-            </ul>
-        </section>
-
-    </main>
-    <footer class="straight squish">
-        <article>
-            <p>©️<span id="currentyear"></span> 🥷🏼 Giovanni Rubio 🥷🏼 </p>
-            <p>Brazil</p>
-            <p id="last_modified">Last modification</p>
-        </article>
-
-    </footer>
+        </footer>
+    </div>
 
 </body>
 
