--- a/week03/place.html
+++ b/week03/place.html
@@ -19,7 +19,7 @@
                 <article>
                     <h2>Brazil</h2>
                     <picture class="hero">
-                        <source src="welcome_to_brazil_large.wepb" media="(min_width: 500)">
+                        <source srcset="welcome_to_brazil_large.wepb" media="(min_width: 500)">
                         <img src="countryimages/welcome_to_brazil_small.webp" alt="Brazil" width="400">
                     </picture>
                 </article>
