--- a/place.html
+++ b/place.html
@@ -25,12 +25,12 @@
             <section class="straight up">
                 <h3>Data</h3>
                 <ul>
-                    <li><span id="boldy">Area</span>: 8,515,767 km</li>
-                    <li><span id="boldy">Population</span>: 203 million</li>
-                    <li><span id="boldy">Capital</span>: Brasilia</li>
-                    <li><span id="boldy">Languages</span>: Portuguese</li>
-                    <li><span id="boldy">Currency</span>: Real</li>
-                    <li><span id="boldy">Time Zone</span>: UTC-2</li>
+                    <li><span>Area</span>: 8,515,767 km</li>
+                    <li><span>Population</span>: 203 million</li>
+                    <li><span>Capital</span>: Brasilia</li>
+                    <li><span>Languages</span>: Portuguese</li>
+                    <li><span>Currency</span>: Real</li>
+                    <li><span>Time Zone</span>: UTC-2</li>
 
                 </ul>
 
@@ -39,10 +39,10 @@
                 <h4>Weather</h4>
                 <img src="images/weather.svg" alt="Weather" width="80" height="167">
                 <ul>
-                    <li><span id="boldy">Temperature</span>: 47° F</li>
-                    <li><span id="boldy">Conditions</span>: Cloudy</li>
-                    <li><span id="boldy">Wind</span>: 5km /h</li>
-                    <li><span id="boldy">Wind chill</span>: 43° C</li>
+                    <li><span>Temperature</span>: 47° F</li>
+                    <li><span>Conditions</span>: Cloudy</li>
+                    <li><span>Wind</span>: 5km /h</li>
+                    <li><span>Wind chill</span>: 43° C</li>
 
                 </ul>
             </section>
