--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Giovanni Rubio">
     <meta name="description"
-        content="This is an album of temple photos of various temples that I have either visited or want to go to someday in the near future. I was sealed in one of those temples and I plan on traveling to a lot of other temples with my wife in the future. Temples are wonderful.">
+        content="This is an album of temple photos of various temples that I have either visited or want to go to someday in the near future.">
     <title>Temple album</title>
     <link rel="stylesheet" href="styles/filtered_large.css">
     <link rel="stylesheet" href="styles/filtered_temples.css">
@@ -26,11 +26,11 @@
             <a id="menu" href="#"></a>
             <nav>
                 <ul class="navigation">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Old</a></li>
-                    <li><a href="#">New</a></li>
-                    <li><a href="#">Large</a></li>
-                    <li><a href="#">Small</a></li>
+                    <li><a href="#" id="home">Home</a></li>
+                    <li><a href="#" id="old">Old</a></li>
+                    <li><a href="#" id="new">New</a></li>
+                    <li><a href="#" id="large">Large</a></li>
+                    <li><a href="#" id="small">Small</a></li>
                 </ul>
             </nav>
         </section>
