--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -147,9 +147,9 @@
                             <div class="forms">
                                 <legend>Are you older than 18? </legend>
                                 <label for="age">Yes</label>
-                                <input type="radio" id="age" name="age">
+                                <input type="radio" id="yes" name="yes">
                                 <label for="age">No</label>
-                                <input type="radio" id="age" name="age">
+                                <input type="radio" id="no" name="no">
                             </div>
                             <div class="forms">
                                 <legend>What is your level of experience?</legend>
@@ -179,7 +179,7 @@
 
     </main>
     <footer>
-        <a href="images/site_large.png"">Wireframe Large</a>
+        <a href="images/site_large.png">Wireframe Large</a>
         <a href=" images/site_mobile.png">Wireframe Mobile</a>
     </footer>
 
