--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -117,8 +117,8 @@
                 <div class="letsgo">
                     <form>
                         <fieldset>
+                            <legend>Join Us this Spring 2026</legend>
                             <div>
-                                <legend>Join Us this Spring 2026</legend>
                                 <label for="fullname">Name</label>
                                 <input type="text" id="fullname" name="fullname">
                             </div>
@@ -132,21 +132,23 @@
                             </div>
                         </fieldset>
                         <fieldset>
+                            <legend>Are you older than 18? </legend>
                             <div class="forms">
-                                <legend>Are you older than 18? </legend>
-                                <label for="age">Yes</label>
+                                <label for="yes">Yes</label>
                                 <input type="radio" id="yes" name="yes">
-                                <label for="age">No</label>
+                                <label for="no">No</label>
                                 <input type="radio" id="no" name="no">
                             </div>
+                        </fieldset>
+                        <fieldset>
+                            <legend>What is your level of experience?</legend>
                             <div class="forms">
-                                <legend>What is your level of experience?</legend>
-                                <label for="xp">Beginner</label>
-                                <input type="radio" id="xp" name="xp">
-                                <label for="xp">intermediate</label>
-                                <input type="radio" id="xp" name="xp">
-                                <label for="xp">Advanced</label>
-                                <input type="radio" id="xp" name="xp">
+                                <label for="begin">Beginner</label>
+                                <input type="radio" id="begin" name="xp">
+                                <label for="inter">intermediate</label>
+                                <input type="radio" id="inter" name="xp">
+                                <label for="adv">Advanced</label>
+                                <input type="radio" id="adv" name="xp">
                             </div class="forms">
                         </fieldset>
                     </form>
