--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div>
-            <section class="flexman">
+            <div class="flexman">
                 <table>
                     <caption>Scores</caption>
                     <thead>
@@ -53,10 +53,12 @@
                             <td>5:30PM PST</td>
                             <td>TBD</td>
                         </tr>
-                        <th scope="row">3</th>
-                        <td>Lakers Vs Heat</td>
-                        <td>1:00PM PST</td>
-                        <td>119-100 W Lakers</td>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Lakers Vs Heat</td>
+                            <td>1:00PM PST</td>
+                            <td>119-100 W Lakers</td>
+                        </tr>
                         <tr>
                             <th scope="row">4</th>
                             <td>Grizzlies Vs Pacers</td>
@@ -108,8 +110,8 @@
                         </tr>
                     </tbody>
                 </table>
-            </section>
-            <section class="clutch">
+            </div>
+            <div class="clutch">
                 <article>
                     <img src="images/fader.webp" alt="heroball">
                     <p></p>
@@ -149,11 +151,11 @@
                                 <input type="radio" id="inter" name="xp">
                                 <label for="adv">Advanced</label>
                                 <input type="radio" id="adv" name="xp">
-                            </div class="forms">
+                            </div>
                         </fieldset>
                     </form>
                 </div>
-            </section>
+            </div>
         </div>
     </main>
     <footer>
