--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <section class="flex">
-            <img src="images/g_league.webp" alt="Gleague" width="100" height="100">
+            <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
             <h1>The G League</h1>
         </section>
         <nav class="nav">
@@ -137,9 +137,9 @@
                             <legend>Are you older than 18? </legend>
                             <div class="forms">
                                 <label for="yes">Yes</label>
-                                <input type="radio" id="yes" name="yes">
+                                <input type="radio" id="yes" name="age">
                                 <label for="no">No</label>
-                                <input type="radio" id="no" name="no">
+                                <input type="radio" id="no" name="age">
                             </div>
                         </fieldset>
                         <fieldset>
