--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The G league</title>
+    <title>The G´s league</title> 
+    <!-- I picked this title because I love basketball and I know it is similar to a league that exists -->
     <meta name="author" content="Giovanni Rubio">
-    <meta name="description" content="This is a site that I made for a fictitious basketball league">
+    <meta name="description" content="This is a site that I made for a fictitious basketball league. I want to create a league in brazil.">
     <link rel="stylesheet" href="styles/site.css">
     <script src="scripts/site.js" defer></script>
 </head>
