--- a/week05/web_form.html
+++ b/week05/web_form.html
@@ -18,7 +18,7 @@
             <fieldset>
                 <div class="no">
                     <label>Product Name
-                        <select name="product" id="equal" required>
+                        <select name="product" id="product-select" required>
                             <option value=""  disabled selected>Choose a product</option>
                         </select>
                     </label>
