--- a/form.html
+++ b/form.html
@@ -53,7 +53,7 @@
     <footer>
         <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
         <p id="last_modified">"Last modification"</p>
-        <p id="visit"></p>
+        <p id="visit">Number of Visits:</p>
 
     </footer>
 </body>
