--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <meta name="author" content="Giovanni Rubio">
-    <meta name="description" content="I am making a form with an interactive javascript">
+    <meta name="description" content="I am making a form with an interactive javascripts. that is all">
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer></script>
 </head>
@@ -39,8 +39,7 @@
                     <label><input type="checkbox" name="ease" value="yes">Ease of Use</label>
                     <label><input type="checkbox" name="performance" value="yes">Performance</label>
                     <label><input type="checkbox" name="design" value="yes">Design</label>
-                    <label>Written Review<span class="blue">(Optional)</span></label><input type="text" name="review"
-                        id="review">
+                    <label>Written Review<span class="blue">(Optional)</span></label><textarea id="review"></textarea>
                     <label>Your Name<span class="blue">(Optional)</span></label><input type="text" name="review"
                         id="yourname">
                     <input type="submit" value="Post Review" class="sub">
