--- a/form.html
+++ b/form.html
@@ -33,13 +33,17 @@
                         <input type="radio" id="twostar" name="stars" value="2" required><label for="twostar"></label>
                         <input type="radio" id="onestar" name="stars" value="1" required><label for="onestar"></label>
                     </div>
-                    <label>Installation Date<input type="date" id="installdate" name="installdate" required></label>
+                    <label for="installdate">Installation Date<input type="date" id="installdate" name="installdate"
+                            required></label>
                     <div>Which features did you find useful in the product?(check all that apply)</div>
-                    <label><input type="checkbox" name="durability" id="durability" value="yes">Durability</label>
-                    <label><input type="checkbox" name="ease" id="ease" value="yes">Ease of Use</label>
-                    <label><input type="checkbox" name="performance" id="performance" value="yes">Performance</label>
-                    <label><input type="checkbox" name="design" id="design" value="yes">Design</label>
-                    <label>Written Review<span class="blue">(Optional)</span></label><textarea id="review" name="review"></textarea>
+                    <label for="durability"><input type="checkbox" name="durability" id="durability"
+                            value="yes">Durability</label>
+                    <label for="ease"><input type="checkbox" name="ease" id="ease" value="yes">Ease of Use</label>
+                    <label for="performance"><input type="checkbox" name="performance" id="performance"
+                            value="yes">Performance</label>
+                    <label for="design"><input type="checkbox" name="design" id="design" value="yes">Design</label>
+                    <label for="review">Written Review<span class="blue">(Optional)</span></label><textarea id="review"
+                        name="review"></textarea>
                     <label>Your Name<span class="blue">(Optional)</span></label><input type="text" name="review"
                         id="yourname">
                     <input type="submit" value="Post Review" class="sub">
