--- a/form.html
+++ b/form.html
@@ -44,8 +44,8 @@
                     <label for="design"><input type="checkbox" name="design" id="design" value="yes">Design</label>
                     <label for="review">Written Review<span class="blue">(Optional)</span></label><textarea id="review"
                         name="review"></textarea>
-                    <label>Your Name<span class="blue">(Optional)</span></label><input type="text" name="review"
-                        id="yourname">
+                    <label for="yourname">Your Name<span class="blue">(Optional)</span></label><input type="text"
+                        name="yourname" id="yourname">
                     <input type="submit" value="Post Review" class="sub">
                 </div>
             </fieldset>
