--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The G´s league</title> 
+    <title>The G´s league</title>
     <!-- I picked this title because I love basketball and I know it is similar to a league that exists -->
     <meta name="author" content="Giovanni Rubio">
-    <meta name="description" content="This is a site that I made for a fictitious basketball league. I want to create a league in brazil.">
-    <link rel="stylesheet" href="styles/site.css">
+    <meta name="description"
+        content="This is a site that I made for a fictitious basketball league. I want to create a league in brazil.">
+    <link rel="stylesheet" href="styles/site-large.css">
     <script src="scripts/site.js" defer></script>
 </head>
 
@@ -17,6 +18,7 @@
         <section class="flex">
             <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
             <h1>The G League</h1>
+            <a id="menu" href="#"></a>
         </section>
         <nav class="nav">
             <ul>
@@ -115,51 +117,43 @@
             <div class="clutch">
                 <article>
                     <img src="images/fader.webp" alt="heroball">
-                    <p></p>
                 </article>
                 <div class="letsgo">
                     <form>
-                        <fieldset>
-                            <legend>Join Us this Spring 2026</legend>
-                            <div>
-                                <label for="fullname">Name</label>
-                                <input type="text" id="fullname" name="fullname">
+                        <fieldset class="order">
+                            <legend> Join Us Today!</legend>
+                            <div class="straight">
+                                <label>First Name*<input type="text" name="fname" required></label>
+                                <label>Last Name*<input type="text" name="lname" required></label>
+                                <label>Cell Phone<input type="tel" name="phone"></label>
+                                <label>Email*<input type="email" name="email" required></label>
                             </div>
-                            <div>
-                                <label for="e-mail">E-mail</label>
-                                <input type="email" id="e-mail" name="e-mail">
-                            </div>
-                            <div>
-                                <label for="phone">Phone</label>
-                                <input type="number" id="phone" name="phone">
-                            </div>
-                        </fieldset>
-                        <fieldset>
-                            <legend>Are you older than 18? </legend>
-                            <div class="forms">
-                                <label for="yes">Yes</label>
-                                <input type="radio" id="yes" name="age">
-                                <label for="no">No</label>
-                                <input type="radio" id="no" name="age">
-                            </div>
-                        </fieldset>
-                        <fieldset>
-                            <legend>What is your level of experience?</legend>
-                            <div class="forms">
-                                <label for="begin">Beginner</label>
-                                <input type="radio" id="begin" name="xp">
-                                <label for="inter">intermediate</label>
-                                <input type="radio" id="inter" name="xp">
-                                <label for="adv">Advanced</label>
-                                <input type="radio" id="adv" name="xp">
-                            </div>
+
+                            <div>Experience Level:</div>
+                            <label><input type="radio" name="audience" value="beginner">Beginner</label>
+                            <label><input type="radio" name="audience" value="intermediate">Intermediate</label>
+                            <label><input type="radio" name="audience" value="advanced">Advanced</label>
+
                         </fieldset>
                     </form>
+                    <div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.511392635481!2d-115.29662092364472!3d36.05662880926039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8b872eb1e88f3%3A0xb4113758ce2d4d4f!2s7242%20Morrison%20St%2C%20Las%20Vegas%2C%20NV%2089148%2C%20USA!5e0!3m2!1sen!2sbr!4v1765388224155!5m2!1sen!2sbr"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    </div>
+
                 </div>
+
+
             </div>
         </div>
     </main>
     <footer>
+
+        <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
+        <p id="last_modified">"Last modification"</p>
         <a href="images/site_large.png">Wireframe Large</a>
         <a href=" images/site_mobile.png">Wireframe Mobile</a>
     </footer>
