--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Giovanni Rubio">
     <meta name="description" content="Landing site for WDD131">
-    <title>WDD131 | Giovanni Rubio</title>
+    <title>WDD,131,Dynamic web fundamentals Giovanni Rubio </title>
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
@@ -50,10 +50,11 @@
 
             </section>
         </div>
-        <aside class="card time">
+        <div class="border">
+            <section class="card time">
 
-            <h3>Web Dev Resources</h3>
-            <nav>
+                <h3>Web Dev Resources</h3>
+
                 <ul>
                     <li><a href="dev.html">Dev.to Community</a></li>
                     <li><a href="smashing.html">Smashing Magazine</a></li>
@@ -61,9 +62,10 @@
                     <li><a href="w3schools.html">W3 Schools</a></li>
                 </ul>
 
-            </nav>
 
-        </aside>
+
+            </section>
+        </div>
 
     </main>
     <footer>
