--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -9,25 +9,28 @@
     <meta name="author" content="Giovanni Rubio">
     <meta name="description"
         content="This is a site that I made for a fictitious basketball league. I want to create a league in brazil.">
-    <link rel="stylesheet" href="styles/site-large.css">
+
+    <link rel="stylesheet" href="styles/site-small.css">
     <script src="scripts/site.js" defer></script>
 </head>
 
-<body>
+<body class="mobile">
     <header>
         <section class="flex">
             <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
             <h1>The G League</h1>
             <a id="menu" href="#"></a>
         </section>
-        <nav class="nav">
-            <ul>
-                <li><a href="#" id="home">Home</a></li>
-                <li><a href="#" id="stats">Stats</a></li>
-                <li><a href="#" id="schedule">Schedule</a></li>
-                <li><a href="#" id="register">Registration</a></li>
-            </ul>
-        </nav>
+        <section>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#" id="home">Home</a></li>
+                    <li><a href="#" id="stats">Stats</a></li>
+                    <li><a href="#" id="schedule">Schedule</a></li>
+                    <li><a href="#" id="register">Registration</a></li>
+                </ul>
+            </nav>
+        </section>
 
 
     </header>
@@ -120,7 +123,7 @@
                 </article>
                 <div class="letsgo">
                     <form>
-                        <fieldset class="order">
+                        <fieldset class="order chaos">
                             <legend> Join Us Today!</legend>
                             <div class="straight">
                                 <label>First Name*<input type="text" name="fname" required></label>
