--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="flexman">
-        <h1><span id="course_title"> WDD 131: Dynamic Web Fundamentals</span> - Giovanni Rubio</h1>
+        <h1><span id="course_title"> WDD 131: Dynamic Web Fundamentals</span></h1>
         <nav>
             <a href="www.linkedin.com/in/giovanni-rubio-22903b328">Linked In</a>
             <a href="https://byupw.instructure.com">Canvas</a>
