--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="flexman">
-        <span id="course_title"> WDD 131: Dynamic Web Fundamentals</span>
+        <span id="course-title"> WDD 131: Dynamic Web Fundamentals</span>
         <nav>
             <a href="www.linkedin.com/in/giovanni-rubio-22903b328">Linked In</a>
             <a href="https://byupw.instructure.com">Canvas</a>
