--- a/place.html
+++ b/place.html
@@ -19,7 +19,7 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="welcome_to_brazil_large.webpg" type="images/webp" media="(min-width: 500px)">
+                <source srcset="images/welcome_to_brazil_large.webp" type="image/webp" media="(min-width: 500px)">
                 <img src="images/welcome_to_brazil_small.webp" alt="Brazil" width="400">
             </picture>
             <section class="straight up">
