--- a/place.html
+++ b/place.html
@@ -42,7 +42,7 @@
                     <li><span>Temperature</span>: 47° F</li>
                     <li><span>Conditions</span>: Cloudy</li>
                     <li><span>Wind</span>: 5km /h</li>
-                    <li><span>Wind chill</span>: 43° C</li>
+                    <li><span id="windy"></span></li>
 
                 </ul>
             </section>
