--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -136,6 +136,7 @@
                             <label><input type="radio" name="audience" value="beginner">Beginner</label>
                             <label><input type="radio" name="audience" value="intermediate">Intermediate</label>
                             <label><input type="radio" name="audience" value="advanced">Advanced</label>
+                            <input type="submit" value="Join now" class="join">
 
                         </fieldset>
                     </form>
