--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -24,10 +24,10 @@
         <section>
             <nav class="nav">
                 <ul>
-                    <li><a href="#" id="home">Home</a></li>
-                    <li><a href="#" id="stats">Stats</a></li>
-                    <li><a href="#" id="schedule">Schedule</a></li>
-                    <li><a href="#" id="register">Registration</a></li>
+                    <li><a href="gsleague.html" id="home">Home</a></li>
+                    <li><a href="stats.html" id="stats">Stats</a></li>
+                    <li><a href="schedule.html" id="schedule">Schedule</a></li>
+                    <li><a href="registration.html" id="register">Registration</a></li>
                 </ul>
             </nav>
         </section>
