--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -16,21 +16,24 @@
 
 <body class="mobile">
     <header>
-        <section class="flex">
-            <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
-            <h1>The G League</h1>
-            <a id="menu" href="#"></a>
-        </section>
-        <section>
-            <nav class="nav">
-                <ul>
-                    <li><a href="gsleague.html" id="home">Home</a></li>
-                    <li><a href="stats.html" id="stats">Stats</a></li>
-                    <li><a href="schedule.html" id="schedule">Schedule</a></li>
-                    <li><a href="registration.html" id="register">Registration</a></li>
-                </ul>
-            </nav>
-        </section>
+        <div class="color">
+            <section class="flex">
+                <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
+                <h1>The G League</h1>
+                
+            </section>
+            <section class="navy">
+                <a id="menu" href="#"></a>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="gsleague.html" id="home">Home</a></li>
+                        <li><a href="stats.html" id="stats">Stats</a></li>
+                        <li><a href="schedule.html" id="schedule">Schedule</a></li>
+                        <li><a href="registration.html" id="register">Registration</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </div>
 
 
     </header>
