--- a/project/registration.html
+++ b/project/registration.html
@@ -41,6 +41,7 @@
     
         <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
         <p id="last_modified">"Last modification"</p>
+        <p><span class="visit">Number of visits</span></p>
         <a href="images/site_large.png">Wireframe Large</a>
         <a href=" images/site_mobile.png">Wireframe Mobile</a>
     </footer>
