--- a/project/stats.html
+++ b/project/stats.html
@@ -35,6 +35,45 @@
     
     </header>
     <main>
+        <div>
+            <table>
+                <caption>League Leaders</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Position</th>
+                        <th scope="col">Stat Type</th>
+                        <th scope="col">Stat Number</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Luka Doncic</th>
+                        <td>SG</td>
+                        <td>Points</td>
+                        <td>2,000 pts</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Victor Wembynyama</th>
+                        <td>C</td>
+                        <td>Blocks</td>
+                        <td>700 Blks</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lamelo Ball</th>
+                        <td>PG</td>
+                        <td>Assists</td>
+                        <td>2,000 Assists</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Jrue Holiday</th>
+                        <td>PG</td>
+                        <td>Steals</td>
+                        <td>1,000 Stls</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
     </main>
     <footer>
