--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -40,7 +40,7 @@
     <main>
         <div>
             <div class="flexman">
-                <table>
+                <table class="align">
                     <caption>Scores</caption>
                     <thead>
                         <tr>
@@ -82,7 +82,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <table>
+                <table class="align">
                     <caption>League Leaders</caption>
                     <thead>
                         <tr>
