--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -125,7 +125,7 @@
                     <img src="images/fader.webp" alt="heroball">
                 </article>
                 <div class="letsgo">
-                    <form>
+                    <form method="get" action="confirm.html">
                         <fieldset class="order chaos">
                             <legend> Join Us Today!</legend>
                             <div class="straight">
