--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -20,7 +20,7 @@
             <section class="flex">
                 <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
                 <h1>The G League</h1>
-                
+
             </section>
             <section class="navy">
                 <a id="menu" href="#"></a>
@@ -146,8 +146,8 @@
                     <div>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.511392635481!2d-115.29662092364472!3d36.05662880926039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8b872eb1e88f3%3A0xb4113758ce2d4d4f!2s7242%20Morrison%20St%2C%20Las%20Vegas%2C%20NV%2089148%2C%20USA!5e0!3m2!1sen!2sbr!4v1765388224155!5m2!1sen!2sbr"
-                            width="600" height="450" style="border:none;" allowfullscreen="" loading="lazy" title="Homebase"
-                            ></iframe>
+                            width="600" height="450" style="border:none;" allowfullscreen="" loading="lazy"
+                            title="Homebase"></iframe>
 
                     </div>
 
