--- a/review.html
+++ b/review.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="scripts/review.js" defer></script>
+
 </head>
+
 <body>
     <h1>Thank You</h1>
-    
+    <footer>
+        <p class="visit">Number of Visits:</p>
+
+    </footer>
 </body>
+
 </html>
