--- a/temples.html
+++ b/temples.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Giovanni Rubio">
     <meta name="description"
-        content="This is an album of temple photos of various temples that I have either visited or want to go to someday in the near future. I was sealed in one of those temples.">
+        content="This is an album of temple photos of various temples that I have either visited or want to go to someday in the near future.">
     <title>Temple album</title>
     <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="stylesheet" href="styles/temples.css">
