--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="styles/site-small.css">
     <script src="scripts/site.js" defer></script>
+    <!-- I picked this font to be my root font and go into all elements possible -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,7 +25,7 @@
         <div class="color">
             <section class="flex">
                 <img src="images/g_league_new.webp" alt="Gleague" width="100" height="100">
-                <h1>The G League</h1>
+                <h1>Here is the title: The G League</h1>
 
             </section>
             <section class="navy">
@@ -46,7 +47,7 @@
         <div>
             <div class="flexman">
                 <table class="align">
-                    <caption>Scores</caption>
+                    <caption>question 1: What are the scores of this weeks games? Scores</caption>
                     <thead>
                         <tr>
                             <th colspan="2">Matchups</th>
@@ -88,7 +89,7 @@
                     </tbody>
                 </table>
                 <table class="align">
-                    <caption>League Leaders</caption>
+                    <caption>Who are the league leaders in the categories? League Leaders</caption>
                     <thead>
                         <tr>
                             <th scope="col">Name</th>
