--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -45,7 +45,10 @@
     </header>
     <main>
         <div>
+            <p>I am going to be using the color rgb(92, 164, 169) for all of the captions header and footer as well as some
+                backgorund colors; and black for the text throughout the page</p>
             <div class="flexman">
+                
                 <table class="align">
                     <caption>question 1: What are the scores of this weeks games? Scores</caption>
                     <thead>
