--- a/project/gsleague.html
+++ b/project/gsleague.html
@@ -167,8 +167,8 @@
         <p>©️<span id="currentyear"></span>, 🥷🏼 Giovanni Rubio 🥷🏼 , Maceio</p>
         <p id="last_modified">"Last modification"</p>
         <p><span class="visit">Number of visits</span></p>
-        <a href="images/site_large.png">Wireframe Large</a>
-        <a href=" images/site_mobile.png">Wireframe Mobile</a>
+        <a href="images/site_large.png" class="white">Wireframe Large</a>
+        <a href=" images/site_mobile.png" class="white">Wireframe Mobile</a>
     </footer>
 
 </body>
